# BEADtier1_automate

./: .gitignore  Blank BEAD Tier1 Template - Tokenized Review.pptx  README.md  gdp_county_level.html  placeholder_assets_manifest.json  pyproject.toml  sample_assets_png_only.json
archive/reference/: gdp_summary_by_region.html
archive/templates/: BEAD Tier1 Template.pptx  Blank BEAD Tier1 Template.pptx
src/tier1_assemble/: __init__.py  assembler.py  cli.py  geometry.py  models.py
tests/: test_assembler.py
